[package]
name = "htmr"
version = "0.1.0"
edition = "2021"
authors = ["Alex Ryapolov <ryapolov@pm.me>"]
license = "MIT"
description = "Yet another macro for rendering HTML"
documentation = "https://docs.rs/htmr"
readme = "README.md"
repository = "https://github.com/teenjuna/htmr"
keywords = ["html", "rendering", "macro"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
